chore: new translations apps-journeys-admin.json Russian

--- a/libs/locales/ru-RU/apps-journeys-admin.json
+++ b/libs/locales/ru-RU/apps-journeys-admin.json
@@ -560,6 +560,36 @@
   "You need access": "Вам нужен доступ",
   "You need to be a publisher to view this template.": "Для просмотра этого шаблона вам необходимо быть издателем.",
   "Back to the Admin Panel": "Вернуться в панель администратора",
+  "You already have an account": "У тебя уже есть аккаунт",
+  "You've already used {{userEmail}}.": "Ты уже использовал {{userEmail}}.",
+  "Sign in with {{service}} to continue": "Чтобы продолжить, войди на сайт {{service}} .",
+  "Please enter your email address": "Введите свой адрес электронной почты",
+  "Log in or Sign up": "Войди или зарегистрируйся",
+  "No account? We'll create one for you automatically.": "Нет аккаунта? Мы создадим его для тебя автоматически.",
+  "OR": "ИЛИ",
+  "Enter your email address here": "Введите свой адрес электронной почты здесь",
+  "Sign in with email": "Авторизуйся с помощью электронной почты",
+  "Enter your password": "Введите пароль",
+  "The email and password you entered don't match": "Введенные тобой электронная почта и пароль не совпадают",
+  "You have entered an incorrect password too many times. Please try again in a few minutes.": "Ты слишком много раз вводил неправильный пароль. Попробуй повторить попытку через несколько минут.",
+  "Sign in": "Войти",
+  "Enter Password": "Введите пароль",
+  "Forgot your password?": "Забыл свой пароль?",
+  "An error occurred: {{message}}": "Произошла ошибка: {{message}}",
+  "Reset Password": "Сбросить пароль",
+  "Get instructions sent to this email that explain how to reset your password.": "Получи на это письмо инструкции, объясняющие, как сбросить пароль.",
+  "Too Short!": "Слишком короткий!",
+  "Too Long!": "Слишком долго!",
+  "Enter your account name": "Введите имя вашей учетной записи",
+  "Password must be at least 6 characters long": "Пароль должен состоять не менее чем из 6 символов",
+  "The email address is already used by another account": "Адрес электронной почты уже используется другим аккаунтом",
+  "Create account": "Создай аккаунт",
+  "First & last name": "Имя и фамилия",
+  "Choose password": "Выберите пароль",
+  "Sign Up": "Подпишись",
+  "Check your email": "Проверь свою электронную почту",
+  "Follow the instructions sent to {{userEmail}} to recover your password": "Следуй инструкциям, присланным на {{userEmail}} , чтобы восстановить пароль.",
+  "Sign in with {{service}}": "Авторизуйся с помощью {{service}}.",
   "Active": "Активный",
   "Archived": "Архивировано",
   "Strategy": "Стратегия",
