chore: new translations apps-journeys-admin.json Chinese Simplified

--- a/libs/locales/zh-Hans-CN/apps-journeys-admin.json
+++ b/libs/locales/zh-Hans-CN/apps-journeys-admin.json
@@ -560,6 +560,36 @@
   "You need access": "您需要访问权限",
   "You need to be a publisher to view this template.": "您需要成为发布者才能查看此模板。",
   "Back to the Admin Panel": "返回管理面板",
+  "You already have an account": "您已经拥有一个账户",
+  "You've already used {{userEmail}}.": "您已经使用过 {{userEmail}}。",
+  "Sign in with {{service}} to continue": "登录 {{service}} 继续",
+  "Please enter your email address": "请输入您的电子邮件地址",
+  "Log in or Sign up": "登录 或 注册",
+  "No account? We'll create one for you automatically.": "没有账户？我们会自动为您创建一个。",
+  "OR": "或",
+  "Enter your email address here": "在此输入您的电子邮件地址",
+  "Sign in with email": "使用电子邮件登录",
+  "Enter your password": "输入密码",
+  "The email and password you entered don't match": "您输入的电子邮件和密码不匹配",
+  "You have entered an incorrect password too many times. Please try again in a few minutes.": "您输入错误密码的次数过多。请几分钟后再试一次。",
+  "Sign in": "登录",
+  "Enter Password": "输入密码",
+  "Forgot your password?": "忘记密码？",
+  "An error occurred: {{message}}": "出现错误： {{message}}",
+  "Reset Password": "重置密码",
+  "Get instructions sent to this email that explain how to reset your password.": "获取发送到此电子邮件的说明，了解如何重置密码。",
+  "Too Short!": "太短了！",
+  "Too Long!": "太长了",
+  "Enter your account name": "输入您的账户名",
+  "Password must be at least 6 characters long": "密码长度至少为 6 个字符",
+  "The email address is already used by another account": "该电子邮件地址已被另一个帐户使用",
+  "Create account": "创建账户",
+  "First & last name": "名和姓",
+  "Choose password": "选择密码",
+  "Sign Up": "注册",
+  "Check your email": "查看电子邮件",
+  "Follow the instructions sent to {{userEmail}} to recover your password": "按照发送到 {{userEmail}} 的说明找回密码",
+  "Sign in with {{service}}": "登录 {{service}}",
   "Active": "活跃",
   "Archived": "存档",
   "Strategy": "战略",
