chore: new translations apps-journeys-admin.json French

--- a/libs/locales/fr-FR/apps-journeys-admin.json
+++ b/libs/locales/fr-FR/apps-journeys-admin.json
@@ -560,6 +560,36 @@
   "You need access": "Tu as besoin d'un accès",
   "You need to be a publisher to view this template.": "Tu dois être un éditeur pour voir ce modèle.",
   "Back to the Admin Panel": "Retour au panneau d'administration",
+  "You already have an account": "Tu as déjà un compte",
+  "You've already used {{userEmail}}.": "Tu as déjà utilisé {{userEmail}}.",
+  "Sign in with {{service}} to continue": "Connecte-toi avec {{service}} pour continuer",
+  "Please enter your email address": "Saisis ton adresse e-mail",
+  "Log in or Sign up": "Se connecter ou s'inscrire",
+  "No account? We'll create one for you automatically.": "Pas de compte ? Nous en créerons un pour toi automatiquement.",
+  "OR": "OU",
+  "Enter your email address here": "Saisis ton adresse électronique ici",
+  "Sign in with email": "Inscris-toi avec ton courriel",
+  "Enter your password": "Entre ton mot de passe",
+  "The email and password you entered don't match": "L'email et le mot de passe que tu as saisis ne correspondent pas",
+  "You have entered an incorrect password too many times. Please try again in a few minutes.": "Tu as saisi un mot de passe incorrect trop souvent. Essaie à nouveau dans quelques minutes.",
+  "Sign in": "S'inscrire",
+  "Enter Password": "Saisir le mot de passe",
+  "Forgot your password?": "Tu as oublié ton mot de passe ?",
+  "An error occurred: {{message}}": "Une erreur s'est produite : {{message}}",
+  "Reset Password": "Réinitialiser le mot de passe",
+  "Get instructions sent to this email that explain how to reset your password.": "Obtiens les instructions envoyées à cet email qui expliquent comment réinitialiser ton mot de passe.",
+  "Too Short!": "Trop court !",
+  "Too Long!": "Trop long !",
+  "Enter your account name": "Saisis le nom de ton compte",
+  "Password must be at least 6 characters long": "Le mot de passe doit comporter au moins 6 caractères",
+  "The email address is already used by another account": "L'adresse électronique est déjà utilisée par un autre compte",
+  "Create account": "Créer un compte",
+  "First & last name": "Prénom et nom",
+  "Choose password": "Choisis ton mot de passe",
+  "Sign Up": "S'inscrire",
+  "Check your email": "Vérifie ton courrier électronique",
+  "Follow the instructions sent to {{userEmail}} to recover your password": "Suis les instructions envoyées à {{userEmail}} pour récupérer ton mot de passe.",
+  "Sign in with {{service}}": "Connecte-toi avec {{service}}",
   "Active": "Actif",
   "Archived": "Archivé",
   "Strategy": "Stratégie",
