chore: new translations apps-journeys-admin.json Spanish

--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -560,6 +560,36 @@
   "You need access": "Necesitas acceso",
   "You need to be a publisher to view this template.": "Necesitas ser editor para ver esta plantilla.",
   "Back to the Admin Panel": "Volver al Panel de Administración",
+  "You already have an account": "Ya tienes una cuenta",
+  "You've already used {{userEmail}}.": "Ya has utilizado {{userEmail}}.",
+  "Sign in with {{service}} to continue": "Inicia sesión en {{service}} para continuar",
+  "Please enter your email address": "Introduce tu dirección de correo electrónico",
+  "Log in or Sign up": "Iniciar sesión o Registrarse",
+  "No account? We'll create one for you automatically.": "¿No tienes cuenta? Te crearemos una automáticamente.",
+  "OR": "O",
+  "Enter your email address here": "Introduce aquí tu dirección de correo electrónico",
+  "Sign in with email": "Iniciar sesión con correo electrónico",
+  "Enter your password": "Introduce tu contraseña",
+  "The email and password you entered don't match": "El correo electrónico y la contraseña que has introducido no coinciden",
+  "You have entered an incorrect password too many times. Please try again in a few minutes.": "Has introducido una contraseña incorrecta demasiadas veces. Vuelve a intentarlo dentro de unos minutos.",
+  "Sign in": "Inicia sesión",
+  "Enter Password": "Introduce la contraseña",
+  "Forgot your password?": "¿Has olvidado tu contraseña?",
+  "An error occurred: {{message}}": "Se ha producido un error: {{message}}",
+  "Reset Password": "Restablecer contraseña",
+  "Get instructions sent to this email that explain how to reset your password.": "Recibe instrucciones enviadas a este correo electrónico que explican cómo restablecer tu contraseña.",
+  "Too Short!": "¡Demasiado corto!",
+  "Too Long!": "¡Demasiado tiempo!",
+  "Enter your account name": "Introduce el nombre de tu cuenta",
+  "Password must be at least 6 characters long": "La contraseña debe tener al menos 6 caracteres",
+  "The email address is already used by another account": "La dirección de correo electrónico ya está siendo utilizada por otra cuenta",
+  "Create account": "Crear cuenta",
+  "First & last name": "Nombre y apellidos",
+  "Choose password": "Elegir contraseña",
+  "Sign Up": "Inscríbete",
+  "Check your email": "Comprueba tu correo electrónico",
+  "Follow the instructions sent to {{userEmail}} to recover your password": "Sigue las instrucciones enviadas a {{userEmail}} para recuperar tu contraseña",
+  "Sign in with {{service}}": "Entra en {{service}}",
   "Active": "Activo",
   "Archived": "Archivado",
   "Strategy": "Estrategia",
