chore: new translations apps-journeys-admin.json Japanese

--- a/libs/locales/ja-JP/apps-journeys-admin.json
+++ b/libs/locales/ja-JP/apps-journeys-admin.json
@@ -560,6 +560,36 @@
   "You need access": "アクセス",
   "You need to be a publisher to view this template.": "このテンプレートを表示するには、パブリッシャーになる必要があります。",
   "Back to the Admin Panel": "管理画面に戻る",
+  "You already have an account": "すでにアカウントをお持ちの場合",
+  "You've already used {{userEmail}}.": "すでに {{userEmail}}。",
+  "Sign in with {{service}} to continue": "{{service}} でサインインして続ける",
+  "Please enter your email address": "メールアドレスを入力してください",
+  "Log in or Sign up": "ログインまたはサインアップ",
+  "No account? We'll create one for you automatically.": "アカウントをお持ちでないですか？自動的に作成いたします。",
+  "OR": "または",
+  "Enter your email address here": "メールアドレスを入力してください",
+  "Sign in with email": "Eメールでログイン",
+  "Enter your password": "パスワードを入力してください",
+  "The email and password you entered don't match": "入力したEメールアドレスとパスワードが一致しません。",
+  "You have entered an incorrect password too many times. Please try again in a few minutes.": "パスワードの入力が何度も間違っています。数分後にもう一度お試しください。",
+  "Sign in": "ログイン",
+  "Enter Password": "パスワード入力",
+  "Forgot your password?": "パスワードをお忘れですか？",
+  "An error occurred: {{message}}": "エラーが発生しました： {{message}}",
+  "Reset Password": "パスワードのリセット",
+  "Get instructions sent to this email that explain how to reset your password.": "パスワードをリセットする方法を説明したEメールを送信します。",
+  "Too Short!": "短すぎる！",
+  "Too Long!": "長すぎる！",
+  "Enter your account name": "アカウント名を入力",
+  "Password must be at least 6 characters long": "パスワードは6文字以上",
+  "The email address is already used by another account": "メールアドレスがすでに他のアカウントで使用されている",
+  "Create account": "アカウント作成",
+  "First & last name": "姓と名",
+  "Choose password": "パスワードの選択",
+  "Sign Up": "会員登録",
+  "Check your email": "メールをチェックする",
+  "Follow the instructions sent to {{userEmail}} to recover your password": "{{userEmail}} に送信される指示に従って、パスワードを回復してください。",
+  "Sign in with {{service}}": "{{service}}でログイン",
   "Active": "アクティブ",
   "Archived": "アーカイブ",
   "Strategy": "戦略",
