chore: new translations apps-journeys-admin.json Turkish

--- a/libs/locales/tr-TR/apps-journeys-admin.json
+++ b/libs/locales/tr-TR/apps-journeys-admin.json
@@ -560,6 +560,36 @@
   "You need access": "Erişime ihtiyacınız var",
   "You need to be a publisher to view this template.": "Bu şablonu görüntülemek için yayıncı olmanız gerekmektedir.",
   "Back to the Admin Panel": "Yönetici Paneline Geri Dön",
+  "You already have an account": "Zaten bir hesabınız var",
+  "You've already used {{userEmail}}.": "Zaten {{userEmail}}adresini kullandınız.",
+  "Sign in with {{service}} to continue": "Devam etmek için {{service}} ile oturum açın",
+  "Please enter your email address": "Lütfen e-posta adresinizi girin",
+  "Log in or Sign up": "Giriş yapın veya Kaydolun",
+  "No account? We'll create one for you automatically.": "Hesabınız yok mu? Sizin için otomatik olarak bir tane oluşturacağız.",
+  "OR": "VEYA",
+  "Enter your email address here": "E-posta adresinizi buraya girin",
+  "Sign in with email": "E-posta ile oturum açın",
+  "Enter your password": "Şifrenizi girin",
+  "The email and password you entered don't match": "Girdiğiniz e-posta ve şifre eşleşmiyor",
+  "You have entered an incorrect password too many times. Please try again in a few minutes.": "Çok fazla kez yanlış şifre girdiniz. Lütfen birkaç dakika içinde tekrar deneyin.",
+  "Sign in": "Oturum aç",
+  "Enter Password": "Şifre Girin",
+  "Forgot your password?": "Şifrenizi mi unuttunuz?",
+  "An error occurred: {{message}}": "Bir hata oluştu: {{message}}",
+  "Reset Password": "Şifre Sıfırlama",
+  "Get instructions sent to this email that explain how to reset your password.": "Bu e-postaya gönderilen ve şifrenizi nasıl sıfırlayacağınızı açıklayan talimatları alın.",
+  "Too Short!": "Çok kısa!",
+  "Too Long!": "Çok uzun!",
+  "Enter your account name": "Hesap adınızı girin",
+  "Password must be at least 6 characters long": "Şifre en az 6 karakter uzunluğunda olmalıdır",
+  "The email address is already used by another account": "E-posta adresi zaten başka bir hesap tarafından kullanılıyor",
+  "Create account": "Hesap oluştur",
+  "First & last name": "Ad ve soyad",
+  "Choose password": "Şifre seçin",
+  "Sign Up": "Kaydolun",
+  "Check your email": "E-postanızı kontrol edin",
+  "Follow the instructions sent to {{userEmail}} to recover your password": "Şifrenizi kurtarmak için {{userEmail}} adresine gönderilen talimatları izleyin",
+  "Sign in with {{service}}": "{{service}}ile oturum açın",
   "Active": "Aktif",
   "Archived": "Arşivlendi",
   "Strategy": "Strateji",
