chore: new translations apps-journeys-admin.json Indonesian

--- a/libs/locales/id-ID/apps-journeys-admin.json
+++ b/libs/locales/id-ID/apps-journeys-admin.json
@@ -560,6 +560,36 @@
   "You need access": "Anda memerlukan akses",
   "You need to be a publisher to view this template.": "Anda harus menjadi penerbit untuk melihat templat ini.",
   "Back to the Admin Panel": "Kembali ke Panel Admin",
+  "You already have an account": "Anda sudah memiliki akun",
+  "You've already used {{userEmail}}.": "Anda telah menggunakan {{userEmail}}.",
+  "Sign in with {{service}} to continue": "Masuk dengan {{service}} untuk melanjutkan",
+  "Please enter your email address": "Silakan masukkan alamat email Anda",
+  "Log in or Sign up": "Masuk atau Daftar",
+  "No account? We'll create one for you automatically.": "Tidak punya akun? Kami akan membuatkan akun untuk Anda secara otomatis.",
+  "OR": "ATAU",
+  "Enter your email address here": "Masukkan alamat email Anda di sini",
+  "Sign in with email": "Masuk dengan email",
+  "Enter your password": "Masukkan kata sandi Anda",
+  "The email and password you entered don't match": "Email dan kata sandi yang Anda masukkan tidak cocok",
+  "You have entered an incorrect password too many times. Please try again in a few minutes.": "Anda memasukkan kata sandi yang salah terlalu sering. Silakan coba lagi dalam beberapa menit.",
+  "Sign in": "Masuk",
+  "Enter Password": "Masukkan Kata Sandi",
+  "Forgot your password?": "Lupa kata sandi Anda?",
+  "An error occurred: {{message}}": "Terjadi kesalahan: {{message}}",
+  "Reset Password": "Atur Ulang Kata Sandi",
+  "Get instructions sent to this email that explain how to reset your password.": "Dapatkan instruksi yang dikirimkan ke email ini yang menjelaskan cara mengatur ulang kata sandi Anda.",
+  "Too Short!": "Terlalu pendek!",
+  "Too Long!": "Terlalu lama!",
+  "Enter your account name": "Masukkan nama akun Anda",
+  "Password must be at least 6 characters long": "Kata sandi minimal harus terdiri dari 6 karakter",
+  "The email address is already used by another account": "Alamat email sudah digunakan oleh akun lain",
+  "Create account": "Buat akun",
+  "First & last name": "Nama depan & belakang",
+  "Choose password": "Pilih kata sandi",
+  "Sign Up": "Daftar",
+  "Check your email": "Periksa email Anda",
+  "Follow the instructions sent to {{userEmail}} to recover your password": "Ikuti petunjuk yang dikirim ke {{userEmail}} untuk memulihkan kata sandi Anda",
+  "Sign in with {{service}}": "Masuk dengan {{service}}",
   "Active": "Aktif",
   "Archived": "Diarsipkan",
   "Strategy": "Strategi",
