test: more tests

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -74,10 +74,10 @@
   "Start a Conversation": "Start a Conversation",
   "Link to Bible": "Link to Bible",
   "Visit a Website": "Visit a Website",
-  "Appears on <1>{count}</1> card_one": "Appears on <1>{count}</1> card",
-  "Appears on <1>{count}</1> card_other": "Appears on <1>{count}</1> card",
-  "<0>{count}</0><1>card</1>_one": "<0>{count}</0><1>card</1>",
-  "<0>{count}</0><1>card</1>_other": "<0>{count}</0><1>card</1>",
+  "Appears on <1>{{count}}</1> card_one": "Appears on <1>{{count}}</1> card",
+  "Appears on <1>{{count}}</1> card_other": "Appears on <1>{{count}}</1> cards",
+  "card_one": "card",
+  "card_other": "cards",
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
   "Button": "Button",
