fix: usetranslation to follow documented standards

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -74,8 +74,8 @@
   "Start a Conversation": "Start a Conversation",
   "Link to Bible": "Link to Bible",
   "Visit a Website": "Visit a Website",
-  "Appears on <1>{{count}}</1> card_one": "Appears on <1>{{count}}</1> card",
-  "Appears on <1>{{count}}</1> card_other": "Appears on <1>{{count}}</1> cards",
+  "<0>Appears on <1>{{ count }}</1> card</0>_one": "<0>Appears on <1>{{ count }}</1> card</0>",
+  "<0>Appears on <1>{{ count }}</1> card</0>_other": "<0>Appears on <1>{{ count }}</1> cards</0>",
   "card_one": "card",
   "card_other": "cards",
   "Messaging App View": "Messaging App View",
