--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -30,6 +30,7 @@
   "Journey Template": "Journey Template",
   "Journey Templates": "Journey Templates",
   "Sign In": "Sign In",
+  "A question about sign in": "A question about sign in",
   "Terms and Conditions": "Terms and Conditions",
   "A question about the terms and conditions form": "A question about the terms and conditions form",
   "Required": "Required",
@@ -540,6 +541,7 @@
   "Help us serve you better": "Help us serve you better",
   "Next": "Next",
   "Feedback & Support": "Feedback & Support",
+  "{{ date }} ● {{ displayLanguage }}": "{{ date }} ● {{ displayLanguage }}",
   "Create Custom Journey": "Create Custom Journey",
   "Template": "Template",
   "Use Template": "Use Template",
@@ -639,7 +641,6 @@
   "Topics, holidays, felt needs, collections": "Topics, holidays, felt needs, collections",
   "Audience": "Audience",
   "Genre": "Genre",
-  "{{ date }} ● {{ displayLanguage }}": "{{ date }} ● {{ displayLanguage }}",
   "No templates to display.": "No templates to display.",
   "You can archive a template to to delist it from the Template Library.": "You can archive a template to to delist it from the Template Library.",
   "Archive Templates": "Archive Templates",
