--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -667,6 +667,9 @@
   "Most Relevant": "Most Relevant",
   "No template fully matches your search criteria.": "No template fully matches your search criteria.",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "Try using fewer filters or look below for templates related to the categories you've selected to search",
+  "To use this template you need to have a registered account.": "To use this template you need to have a registered account.",
+  "Log in": "Log in",
+  "Create an account": "Create an account",
   "Use This Template": "Use This Template",
   "Add Journey to Team": "Add Journey to Team",
   "Use this template to make it your journey": "Use this template to make it your journey",
