fix: story and translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -601,6 +601,17 @@
   "Journey will be copied to selected team.": "Journey will be copied to selected team.",
   "Select Team": "Select Team",
   "Copy to ...": "Copy to ...",
+  "Domain name is a required field": "Domain name is a required field",
+  "Custom Domain Settings": "Custom Domain Settings",
+  "Your domain name": "Your domain name",
+  "Domain Name": "Domain Name",
+  "Update": "Update",
+  "Default Journey": "Default Journey",
+  "DNS Config": "DNS Config",
+  "A": "A",
+  "CNAME": "CNAME",
+  "76.76.21.21": "76.76.21.21",
+  "cname.vercel-dns.com": "cname.vercel-dns.com",
   "Create Team": "Create Team",
   "Create": "Create",
   "Private: Visible only to your team": "Private: Visible only to your team",
@@ -621,6 +632,7 @@
   "Manager": "Manager",
   "Member": "Member",
   "Members": "Members",
+  "Custom Domain": "Custom Domain",
   "Rename": "Rename",
   "Invite Teammates": "Invite Teammates",
   "Invite team members": "Invite team members",
