chore: add translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -541,6 +541,11 @@
   "Help us serve you better": "Help us serve you better",
   "Next": "Next",
   "Feedback & Support": "Feedback & Support",
+  "Sign up or Log in": "Sign up or Log in",
+  "Final Details": "Final Details",
+  "Create a Team": "Create a Team",
+  "Journey Ready!": "Journey Ready!",
+  "Let's get you on the journey": "Let's get you on the journey",
   "{{ date }} ● {{ displayLanguage }}": "{{ date }} ● {{ displayLanguage }}",
   "Create Custom Journey": "Create Custom Journey",
   "Template": "Template",
