--- a/libs/locales/ar-SA/libs-journeys-ui.json
+++ b/libs/locales/ar-SA/libs-journeys-ui.json
@@ -1,22 +1,22 @@
 {
-  "Form": "Form",
-  "Name must be 2 characters or more": "Name must be 2 characters or more",
-  "Name must be 50 characters or less": "Name must be 50 characters or less",
-  "Required": "Required",
-  "Please enter a valid email address": "Please enter a valid email address",
-  "Name": "Name",
-  "Email": "Email",
-  "Submit": "Submit",
-  "Journey": "Journey",
-  "Copied to clipboard": "Copied to clipboard",
-  "Share": "Share",
-  "Copy Link": "Copy Link",
-  "Facebook": "Facebook",
-  "Twitter": "Twitter",
-  "Report this content": "Report this content",
-  "Terms & Conditions": "Terms & Conditions",
-  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".",
+  "Form": "الاستمارة",
+  "Name must be 2 characters or more": "يجب أن يتكون الاسم من حرفين أو أكثر",
+  "Name must be 50 characters or less": "يجب أن يتكون الاسم من 50 حرفاً أو أقل",
+  "Required": "مطلوب",
+  "Please enter a valid email address": "الرجاء إدخال عنوان بريد إلكتروني صحيح",
+  "Name": "الاسم",
+  "Email": "البريد الإلكتروني",
+  "Submit": "إرسال",
+  "Journey": "الرحلة",
+  "Copied to clipboard": "نسخ إلى الحافظة",
+  "Share": "شارك",
+  "Copy Link": "نسخ الرابط",
+  "Facebook": "فيسبوك",
+  "Twitter": "تويتر",
+  "Report this content": "الإبلاغ عن هذا المحتوى",
+  "Terms & Conditions": "الشروط والأحكام",
+  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "جميع بيانات التعريف الشخصية المسجلة على هذا الموقع الإلكتروني ستتم معالجتها من قبل منشئ الرحلة: \"{{ teamTitle }}\".",
   "NextSteps © {{year}}": "NextSteps © {{year}}",
-  "Untitled": "Untitled",
-  "Step {{number}}": "Step {{number}}"
+  "Untitled": "بدون عنوان",
+  "Step {{number}}": "الخطوة {{number}}"
 }
