--- a/libs/locales/ar-SA/apps-docs.json
+++ b/libs/locales/ar-SA/apps-docs.json
@@ -1,10 +1,10 @@
 {
-  "Deploy Quickly": "Deploy Quickly",
-  "Our Continuous Integration & Continuous Delivery pipeline lets you deliver code changes more frequently and reliably.": "Our Continuous Integration & Continuous Delivery pipeline lets you deliver code changes more frequently and reliably.",
-  "Common Environment": "Common Environment",
-  "We run on Docker. This means every developer shares the same environment that closely mimics production making collaboration simple.": "We run on Docker. This means every developer shares the same environment that closely mimics production making collaboration simple.",
-  "Powered by Typescript": "Powered by Typescript",
-  "TypeScript is a strongly typed programming language that builds on JavaScript, giving you better tooling at any scale.": "TypeScript is a strongly typed programming language that builds on JavaScript, giving you better tooling at any scale.",
-  "Core Development Kit Documentation": "Core Development Kit Documentation",
-  "Welcome - 5min ": "Welcome - 5min "
+  "Deploy Quickly": "النشر بسرعة",
+  "Our Continuous Integration & Continuous Delivery pipeline lets you deliver code changes more frequently and reliably.": "يتيح لك خط أنابيب التكامل المستمر والتسليم المستمر الخاص بنا تقديم تغييرات التعليمات البرمجية بشكل أكثر تواتراً وموثوقية.",
+  "Common Environment": "البيئة المشتركة",
+  "We run on Docker. This means every developer shares the same environment that closely mimics production making collaboration simple.": "نحن نعمل على Docker. وهذا يعني أن كل مطور يتشارك نفس البيئة التي تحاكي الإنتاج بشكل وثيق مما يجعل التعاون بسيطاً.",
+  "Powered by Typescript": "مدعوم من تايبسكريبت",
+  "TypeScript is a strongly typed programming language that builds on JavaScript, giving you better tooling at any scale.": "TypeScript هي لغة برمجة مطبوعة بقوة تعتمد على JavaScript، مما يمنحك أدوات أفضل على أي نطاق.",
+  "Core Development Kit Documentation": "وثائق مجموعة أدوات التطوير الأساسية",
+  "Welcome - 5min ": "ترحيب - 5 دقائق "
 }
