--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -542,9 +542,9 @@
   "Next": "Next",
   "Feedback & Support": "Feedback & Support",
   "Sign up or Log in": "Sign up or Log in",
+  "Verify your account": "Verify your account",
   "Final Details": "Final Details",
   "Create a Team": "Create a Team",
-  "Journey Ready!": "Journey Ready!",
   "Let's get you on the journey": "Let's get you on the journey",
   "{{ date }} ● {{ displayLanguage }}": "{{ date }} ● {{ displayLanguage }}",
   "Create Custom Journey": "Create Custom Journey",
