fix: onboarding experience design

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "Visitors",
   "Filters": "Filters",
   "A Few Questions": "A Few Questions",
+  "User Insights": "User Insights",
   "a question about onboarding form": "a question about onboarding form",
   "Edit Template": "Edit Template",
   "Access Denied": "Access Denied",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "Visitor's Activity",
   "Visitor Details": "Visitor Details",
   "New Team": "New Team",
+  "Create a Team": "Create a Team",
   "A question about creating a team for the first time.": "A question about creating a team for the first time.",
   "Journey Template": "Journey Template",
   "Journey Templates": "Journey Templates",
   "Sign In": "Sign In",
+  "Create New Account or Log in": "Create New Account or Log in",
   "A question about sign in": "A question about sign in",
   "Terms and Conditions": "Terms and Conditions",
   "A question about the terms and conditions form": "A question about the terms and conditions form",
   "Required": "Required",
-  "Validate NextStep Email": "Validate NextStep Email",
   "Verify Your Email": "Verify Your Email",
+  "Validate NextStep Email": "Validate NextStep Email",
   "To start making NextSteps journeys": "To start making NextSteps journeys",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
   "Resend Validation Email": "Resend Validation Email",
@@ -538,13 +541,11 @@
   "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "Reports",
   "See all": "See all",
-  "Help us serve you better": "Help us serve you better",
   "Next": "Next",
   "Feedback & Support": "Feedback & Support",
   "Sign up or Log in": "Sign up or Log in",
   "Verify your account": "Verify your account",
   "Final Details": "Final Details",
-  "Create a Team": "Create a Team",
   "Let's get you on the journey": "Let's get you on the journey",
   "{{ date }} ● {{ displayLanguage }}": "{{ date }} ● {{ displayLanguage }}",
   "Create Custom Journey": "Create Custom Journey",
@@ -681,8 +682,7 @@
   "{{count}} Videos_one": "{{count}} Video",
   "{{count}} Videos_other": "{{count}} Videos",
   "Related Templates": "Related Templates",
-  "Before You Start": "Before You Start",
-  "Please review these documents:": "Please review these documents:",
+  "Before you start, please review these documents:": "Before you start, please review these documents:",
   "Terms of Use": "Terms of Use",
   "End User License Agreement": "End User License Agreement",
   "Community Guidelines": "Community Guidelines",
