chore: extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -543,9 +543,8 @@
   "See all": "See all",
   "Next": "Next",
   "Feedback & Support": "Feedback & Support",
-  "Sign up or Log in": "Sign up or Log in",
-  "Verify your account": "Verify your account",
-  "Final Details": "Final Details",
+  "Create an account": "Create an account",
+  "Journey Begins": "Journey Begins",
   "Let's get you on the journey": "Let's get you on the journey",
   "{{ date }} ● {{ displayLanguage }}": "{{ date }} ● {{ displayLanguage }}",
   "Create Custom Journey": "Create Custom Journey",
