--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -602,12 +602,16 @@
   "Select Team": "Select Team",
   "Copy to ...": "Copy to ...",
   "Domain name is a required field": "Domain name is a required field",
-  "Custom Domain Settings": "Custom Domain Settings",
-  "Your domain name": "Your domain name",
-  "Domain Name": "Domain Name",
-  "Update": "Update",
+  "Custom domain updated": "Custom domain updated",
+  "Default journey set": "Default journey set",
+  "Domain Settings": "Domain Settings",
   "Default Journey": "Default Journey",
+  "Custom Domain Setup": "Custom Domain Setup",
+  "Instructions": "Instructions",
+  "Use your own domain rather than 'your.nextstep.is' streamlines domain verification for ads, keeps our tool discreet (at a very basic level), and assists in bypassing certain reigonal blocks": "Use your own domain rather than 'your.nextstep.is' streamlines domain verification for ads, keeps our tool discreet (at a very basic level), and assists in bypassing certain reigonal blocks",
+  "Domain Name": "Domain Name",
   "DNS Config": "DNS Config",
+  "Status": "Status",
   "A": "A",
   "CNAME": "CNAME",
   "76.76.21.21": "76.76.21.21",
