--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -602,20 +602,22 @@
   "Select Team": "Select Team",
   "Copy to ...": "Copy to ...",
   "Domain name is a required field": "Domain name is a required field",
+  "Domain name not updated": "Domain name not updated",
   "Custom domain updated": "Custom domain updated",
   "Default journey set": "Default journey set",
   "Domain Settings": "Domain Settings",
   "Default Journey": "Default Journey",
-  "Custom Domain Setup": "Custom Domain Setup",
-  "Instructions": "Instructions",
-  "Using your own domain rather than 'your.nextstep.is' streamlines domain verification for ads, keeps our tool discreet (at a very basic level), and assists in bypassing certain reigonal blocks": "Using your own domain rather than 'your.nextstep.is' streamlines domain verification for ads, keeps our tool discreet (at a very basic level), and assists in bypassing certain reigonal blocks",
-  "Domain Name": "Domain Name",
   "DNS Config": "DNS Config",
   "Status": "Status",
   "A": "A",
   "CNAME": "CNAME",
   "76.76.21.21": "76.76.21.21",
   "cname.vercel-dns.com": "cname.vercel-dns.com",
+  "Custom Domain Setup": "Custom Domain Setup",
+  "Instructions": "Instructions",
+  "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.": "NextSteps provides all journeys with a your.nextstep.is URL. However, to provide greater personalization and flexibility to your team, you can instead add a custom domain. To get started you’ll need to purchase a domain, complete the form below, and point it to NextSteps servers.",
+  "Domain Name": "Domain Name",
+  "Reset": "Reset",
   "Create Team": "Create Team",
   "Create": "Create",
   "Private: Visible only to your team": "Private: Visible only to your team",
