--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -686,5 +686,6 @@
   "ID": "ID",
   "Last Active": "Last Active",
   "User Data": "User Data",
-  "Polls": "Polls"
+  "Polls": "Polls",
+  "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_zero": "<0>Journey Templates</0><1>in</1><2>All Languages</2>"
 }
