--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -79,6 +79,7 @@
   "There was an error loading the report": "There was an error loading the report",
   "The report is loading...": "The report is loading...",
   "Edit": "Edit",
+  "Add Block": "Add Block",
   "Fill this card with content": "Fill this card with content",
   "<0>Select Card Template</0><1>or add blocks from the list below ⤵</1>": "<0>Select Card Template</0><1>or add blocks from the list below ⤵</1>",
   "Edit text...": "Edit text...",
@@ -147,21 +148,20 @@
   "Footer Properties": "Footer Properties",
   "Hosted By": "Hosted By",
   "Chat Widget": "Chat Widget",
-  "Select a Host": "Select a Host",
-  "Cannot edit hosts for this old journey": "Cannot edit hosts for this old journey",
-  "Only {{teamName} members can edit this": "Only {{teamName} members can edit this",
-  "Edit Host": "Edit Host",
-  "Create Host": "Create Host",
   "Clear": "Clear",
+  "Back": "Back",
   "Edits: Making changes here will apply to all journeys that share this Host.": "Edits: Making changes here will apply to all journeys that share this Host.",
   "Location": "Location",
   "Please enter a host name": "Please enter a host name",
-  "Information": "Information",
+  "Host Name": "Host Name",
   "Why does your journey need a host?": "Why does your journey need a host?",
   "A great way to add personality to your content is to include both male and female journey creators. Diverse creators, especially with a local feel, are more likely to engage users in conversation.": "A great way to add personality to your content is to include both male and female journey creators. Diverse creators, especially with a local feel, are more likely to engage users in conversation.",
   "In countries with security concerns, it is advisable to create fake personas for your own safety.": "In countries with security concerns, it is advisable to create fake personas for your own safety.",
   "Hosts": "Hosts",
   "Create New": "Create New",
+  "Select a Host": "Select a Host",
+  "Cannot edit hosts for this old journey": "Cannot edit hosts for this old journey",
+  "Only {{ teamName }} members can edit this": "Only {{ teamName }} members can edit this",
   "Action": "Action",
   "Color": "Color",
   "Button Size": "Button Size",
@@ -385,6 +385,7 @@
   "This could be your church or ministry website, or whatever you want to redirect the viewer to.": "This could be your church or ministry website, or whatever you want to redirect the viewer to.",
   "If the target of the journey is to download the Bible": "If the target of the journey is to download the Bible",
   "Goal Details": "Goal Details",
+  "Information": "Information",
   "Character limit reached": "Character limit reached",
   "Description": "Description",
   "Recommended length: up to 18 words": "Recommended length: up to 18 words",
