chore: extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -670,6 +670,7 @@
   "Use This Template": "Use This Template",
   "Add Journey to Team": "Add Journey to Team",
   "Use this template to make it your journey": "Use this template to make it your journey",
+  "Use this template to see more!": "Use this template to see more!",
   "{{count}} Cards_one": "{{count}} Card",
   "{{count}} Cards_other": "{{count}} Cards",
   "{{count}} Videos_one": "{{count}} Video",
