--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -670,6 +670,8 @@
   "Use This Template": "Use This Template",
   "Add Journey to Team": "Add Journey to Team",
   "Use this template to make it your journey": "Use this template to make it your journey",
+  "{{count}} more cards_one": "{{count}} more cards",
+  "{{count}} more cards_other": "{{count}} more cards",
   "Use this template to see more!": "Use this template to see more!",
   "{{count}} Cards_one": "{{count}} Card",
   "{{count}} Cards_other": "{{count}} Cards",
