chore: new translations apps-journeys-admin.json French

--- a/libs/locales/fr-FR/apps-journeys-admin.json
+++ b/libs/locales/fr-FR/apps-journeys-admin.json
@@ -666,6 +666,7 @@
   "Use This Template": "Utilise ce modèle",
   "Add Journey to Team": "Ajouter Journey à l'équipe",
   "Use this template to make it your journey": "Utilise ce modèle pour en faire ton voyage",
+  "Use this template to see more!": "Utilise ce modèle pour en voir plus !",
   "Related Templates": "Modèles apparentés",
   "Before You Start": "Avant de commencer",
   "Please review these documents:": "Prends connaissance de ces documents :",
@@ -704,6 +705,8 @@
   "<0>Appears on <2>{{ count }}</2> card</0>_other": "<0>Apparaît sur les <2>{{ count }}</2> cartes</0>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_one": "<0>Modèles de voyage</0><1>en</1><2>{{firstLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Modèles de voyage</0><1>en</1><2>{{count}} langues</2>",
+  "{{count}} more cards_one": "{{count}} plus de carte",
+  "{{count}} more cards_other": "{{count}} plus de cartes",
   "{{count}} Cards_one": "{{count}} Carte",
   "{{count}} Cards_other": "{{count}} Cartes",
   "{{count}} Videos_one": "{{count}} Vidéo",
