chore: new translations apps-journeys-admin.json Spanish

--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -666,6 +666,7 @@
   "Use This Template": "Utiliza esta plantilla",
   "Add Journey to Team": "Añadir Viaje al equipo",
   "Use this template to make it your journey": "Utiliza esta plantilla para hacer tu viaje",
+  "Use this template to see more!": "¡Utiliza esta plantilla para ver más!",
   "Related Templates": "Plantillas relacionadas",
   "Before You Start": "Antes de empezar",
   "Please review these documents:": "Por favor, revisa estos documentos:",
@@ -704,6 +705,8 @@
   "<0>Appears on <2>{{ count }}</2> card</0>_other": "<0>Aparece en <2>{{ count }}</2> tarjetas</0>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_one": "<0>Plantillas de viaje</0><1>en</1><2>{{firstLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Plantillas de viaje</0><1>en</1><2>{{count}} idiomas</2>",
+  "{{count}} more cards_one": "{{count}} más tarjeta",
+  "{{count}} more cards_other": "{{count}} más tarjetas",
   "{{count}} Cards_one": "{{count}} Tarjeta",
   "{{count}} Cards_other": "{{count}} Tarjetas",
   "{{count}} Videos_one": "{{count}} Vídeo",
