chore: new translations apps-journeys-admin.json Arabic

--- a/libs/locales/ar-SA/apps-journeys-admin.json
+++ b/libs/locales/ar-SA/apps-journeys-admin.json
@@ -666,6 +666,7 @@
   "Use This Template": "استخدم هذا القالب",
   "Add Journey to Team": "إضافة رحلة إلى الفريق",
   "Use this template to make it your journey": "استخدم هذا النموذج لجعلها رحلتك",
+  "Use this template to see more!": "Use this template to see more!",
   "Related Templates": "القوالب ذات الصلة",
   "Before You Start": "قبل أن تبدأ",
   "Please review these documents:": "يرجى مراجعة هذه الوثائق:",
@@ -711,6 +712,12 @@
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_few": "<0>قوالب الرحلات</0><1>باللغات</1><2>{{count}} اللغات</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_many": "<0>قوالب الرحلات</0><1>باللغات</1><2>{{count}} اللغات</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>قوالب الرحلات</0><1>باللغات</1><2>{{count}} اللغات</2>",
+  "{{count}} more cards_zero": "{{count}} more cards",
+  "{{count}} more cards_one": "{{count}} more card",
+  "{{count}} more cards_two": "{{count}} more cards",
+  "{{count}} more cards_few": "{{count}} more cards",
+  "{{count}} more cards_many": "{{count}} more cards",
+  "{{count}} more cards_other": "{{count}} more cards",
   "{{count}} Cards_zero": "{{count}} البطاقات",
   "{{count}} Cards_one": "{{count}} البطاقة",
   "{{count}} Cards_two": "{{count}} البطاقات",
