chore: new translations apps-journeys-admin.json Russian

--- a/libs/locales/ru-RU/apps-journeys-admin.json
+++ b/libs/locales/ru-RU/apps-journeys-admin.json
@@ -666,6 +666,7 @@
   "Use This Template": "Используйте этот шаблон",
   "Add Journey to Team": "Добавь Journey в команду",
   "Use this template to make it your journey": "Используйте этот шаблон, чтобы сделать это путешествие своим",
+  "Use this template to see more!": "Используй этот шаблон, чтобы увидеть больше!",
   "Related Templates": "Связанные шаблоны",
   "Before You Start": "Прежде чем ты начнешь",
   "Please review these documents:": "Пожалуйста, ознакомьтесь с этими документами:",
@@ -708,6 +709,10 @@
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_few": "<0>Шаблоны путешествий</0><1>в</1><2>Все языки</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_many": "<0>Шаблоны путешествий</0><1>в</1><2>Все языки</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Шаблоны путешествий</0><1>в</1><2>Все языки</2>",
+  "{{count}} more cards_one": "{{count}} Больше карты",
+  "{{count}} more cards_few": "{{count}} Больше карточек",
+  "{{count}} more cards_many": "{{count}} Больше карточек",
+  "{{count}} more cards_other": "{{count}} Больше карточек",
   "{{count}} Cards_one": "{{count}} Карта",
   "{{count}} Cards_few": "{{count}} Карты",
   "{{count}} Cards_many": "{{count}} Карты",
