chore: new translations apps-journeys-admin.json Turkish

--- a/libs/locales/tr-TR/apps-journeys-admin.json
+++ b/libs/locales/tr-TR/apps-journeys-admin.json
@@ -666,6 +666,7 @@
   "Use This Template": "Bu Şablonu Kullanın",
   "Add Journey to Team": "Journey'i Ekibe Ekleyin",
   "Use this template to make it your journey": "Kendi yolculuğunuzu yapmak için bu şablonu kullanın",
+  "Use this template to see more!": "Daha fazlasını görmek için bu şablonu kullanın!",
   "Related Templates": "İlgili Şablonlar",
   "Before You Start": "Başlamadan Önce",
   "Please review these documents:": "Lütfen bu belgeleri inceleyin:",
@@ -704,6 +705,8 @@
   "<0>Appears on <2>{{ count }}</2> card</0>_other": "<0>Üzerinde görünür <2>{{ count }}</2> kartlar</0>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_one": "<0>Yolculuk Şablonları</0><1>içinde</1><2>{{firstLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Yolculuk Şablonları</0><1>içinde</1><2>{{count}} diller</2>",
+  "{{count}} more cards_one": "{{count}} daha fazla kart",
+  "{{count}} more cards_other": "{{count}} daha fazla kart",
   "{{count}} Cards_one": "{{count}} Kart",
   "{{count}} Cards_other": "{{count}} Kartlar",
   "{{count}} Videos_one": "{{count}} Video",
